# hackerrank

cpp/: init
cpp/.skel/: main.cpp
cpp/append-and-delete/: CMakeLists.txt  main.cpp
cpp/climbing-the-leaderboard/: deque.cpp  list.cpp  main.cpp  set.cpp  vector.cpp
cpp/cut-the-sticks/: main.cpp
cpp/extra-long-factorial/: CMakeLists.txt  main.cpp  mktable.cpp
cpp/jumping-on-the-clouds-revisited/: CMakeLists.txt  main.cpp
cpp/library-fine/: main.cpp
cpp/permutation-equation/: main.cpp
cpp/strange-advertising/: main.cpp
py/beautiful-days-at-the-movies/: main.py
py/climbing-the-leaderboard/: main.py
py/designer-pdf-viewer/: main.py
py/the-hurdle-race/: main.py
py/utopian-tree/: main.py
